--- a/style.css
+++ b/style.css
@@ -54,3 +54,9 @@ a:hover {
 .form-group {
     margin-bottom: 15px;
 }
+
+.form-group label {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+}
