--- a/style.css
+++ b/style.css
@@ -60,3 +60,10 @@ a:hover {
     margin-bottom: 5px;
     font-weight: bold;
 }
+
+.form-group input, .form-group textarea {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
