--- a/style.css
+++ b/style.css
@@ -80,3 +80,14 @@ a:hover {
     border-top: 1px solid #ccc;
     color: #777;
 }
+
+@media (max-width: 768px) {
+    .container {
+        padding: 10px;
+    }
+
+    .button {
+        width: 100%;
+        box-sizing: border-box;
+    }
+}
