--- a/style.css
+++ b/style.css
@@ -91,3 +91,10 @@ a:hover {
         box-sizing: border-box;
     }
 }
+
+.navbar {
+    background-color: #333;
+    color: #fff;
+    padding: 10px 0;
+    text-align: center;
+}
